@@ -1,5 +1,10 @@
 $Id$
 
+2015-05-30  Nidhi Malhotra  <nidhi.malhotra@pmcs.com>
+
+	aacraid.h, os_win32.cpp:
+	Add aacraid support for Windows (ticket #496).
+
 2015-05-27  Christian Franke  <franke@computer.org>
 
 	INSTALL: Update ./configure description.
